--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </section>
 
-    <section id="two" class="main style2 right dark fullscreen">
+    <section id="two" class="main style2 left dark fullscreen">
       <div class="content box style2">
         <header>
           <h2>Who I Am</h2>
