--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
         </div>
       </div>
     </section>
-    <div style="margin: auto; padding: 30px; border: 4px; width: 330px; border-style: solid; text-align: center; margin-bottom: 100px">
+    <div style="margin: auto; text-align: center; margin-bottom: 100px;">
       <h2>Links</h2>
-      <a
+      <span><a
         href="https://secondopinionforum.com/about"
         style="color: black; margin: 5px"
         >secondopinionforum.com/about</a
-      ></br>
+      ></span></br>
       <a
         href="https://github.com/AdamCassidy/feedback-app"
         style="color: black; margin: 5px"
