Add poptrox margins and hyphens to links

--- a/index.html
+++ b/index.html
@@ -115,22 +115,22 @@
       <a
         href="https://github.com/AdamCassidy/feedback-app"
         style="color: black; margin: 5px"
-        >2ndOpinionCode</a
+        >2nd-Opinion-Code</a
       ></br>
       <a
         href="https://github.com/AdamCassidy/GreenThumb/tree/master-backend/backend"
         style="color: black; margin: 5px"
-        >GreenThumbCode</a
+        >Green-Thumb-Code</a
       ></br>
       <a
         href="https://github.com/AdamCassidy/PyBraid"
         style="color: black; margin: 5px"
-        >PyBraidCode</a
+        >PyBraid-Code</a
       ></br>
       <a
         href="https://github.com/AdamCassidy/DetectPhoneMovement"
         style="color: black; margin: 5px"
-        >DetectPhoneMovementCode</a
+        >Detect-Phone-Movement-Code</a
       >
     </div>
 
