--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
           <article class="from-right">
             <a href="images/greenThumbContent.png" class="image fit"
-              ><img src="images/greenThumbLogo.png" title="GreenThumb" alt=""
+              ><img src="images/greenthumbLogo.png" title="GreenThumb" alt=""
             /></a>
           </article>
           <article class="from-left">
