Change pyBraid content image name
So it matches the file name

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </article>
           <article class="from-left">
             <p></p>
-            <a href="images/pybraidContent.png" class="image fit">
+            <a href="images/pyBraidContent.png" class="image fit">
               <img src="images/pybraidLogo.png" title="Pybraid" alt=""
             /></a>
           </article>
