Change secondopinionforum to the full link.

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
     <div style="margin: auto; text-align: center; margin-bottom: 100px;">
       <h2>Links</h2>
       <span><a
-        href="secondopinionforum.com"
+        href="https://secondopinionforum.com/about"
         style="color: black; margin: 5px"
-        >secondopinionforum.com</a
+        >https://secondopinionforum.com/about</a
       ></span></br>
       <a
         href="https://github.com/AdamCassidy/feedback-app"
