Add Software Pic Assistant

--- a/index.html
+++ b/index.html
@@ -102,6 +102,20 @@
               </h1>
             </a>
           </article>
+          <article class="from-left">
+            <p></p>
+
+            <a href="images/softwarePicAssistantContent.png" class="image fit">
+              <img
+                src="images/softwarePicAssistant.png"
+                title="Software Pic Assistant"
+                alt=""
+              />
+              <h1 style="color: black; font-size: 34px">
+                Software Pic Assistant
+              </h1>
+            </a>
+          </article>
         </div>
       </div>
     </section>
@@ -131,6 +145,11 @@
         href="https://github.com/AdamCassidy/DetectPhoneMovement"
         style="color: black; margin: 5px"
         >Detect-Phone-Movement-Code</a
+      ></br>
+      <a
+        href="https://huggingface.co/Narrator5000/llavanext-finetuned-stackoverflow-vqa"
+        style="color: black; margin: 5px"
+        >Software-Pic-Assistant-Model-Card</a
       >
     </div>
 
