--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <head>
     <title>Adam Cassidy</title>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <noscript
       ><link rel="stylesheet" href="assets/css/noscript.css"
     /></noscript>
@@ -23,8 +23,7 @@
       <h1>Adam Cassidy</h1>
       <nav>
         <ul>
-          <li><a href="#intro">Intro</a></li>
-          <li><a href="#two">Who I Am</a></li>
+          <li><a href="#whoIAm">Who I Am</a></li>
           <li><a href="#work">My Work</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -39,22 +38,27 @@
         </header>
         <p>Welcome to my portfolio</p>
         <footer>
-          <a href="#two" class="button style2 down">More</a>
+          <a id="introDownArrow" href="#whoIAm" class="scroll-down-arrow" aria-label="Scroll to next section">
+            <span class="arrow-head"></span>
+          </a>
         </footer>
       </div>
     </section>
 
-    <section id="two" class="main style2 left dark fullscreen">
+    <section id="whoIAm" class="main style2 left dark fullscreen">
       <div class="content box style2">
         <header>
           <h2>Who I Am</h2>
         </header>
-        <p>
-          I'm a persistent and driven software developer from Waterloo, Ontario,
-          Canada, with a bachelor's degree in computer science.
-        </p>
+        <div class="portfolio-description">
+          <p>    I'm a full stack developer that believes that the best technology has the user's goals top of mind.
+            My goal is to create software that's as organized behind the scenes as it is intuitive on the screen.
+          I believe that exceptional results are born from clarity and collaboration.</p>
+        </div>
       </div>
-      <a href="#work" class="button style2 down anchored">Next</a>
+      <a id="whoIAmDownArrow" href="#work" class="scroll-down-arrow" aria-label="Scroll to next section">
+        <span class="arrow-head"></span>
+      </a>
     </section>
 
     <!-- Work -->
@@ -63,93 +67,220 @@
         <header>
           <h2>My Work</h2>
         </header>
-
+        <!-- TODO: Show/hide details button -->
+      <!-- <div>
+        <button class="button anchored">Show/hide details</button>
+      </div> -->
+        
         <!-- Gallery  -->
-
-        <div class="gallery">
-          <article class="from-left">
-            <a href="images/2ndOpinionContent.png" class="image fit"
-              ><img
-                src="images/2ndOpinionFullLogo.png"
-                title="2nd Opinion"
-                alt=""
-              />
-            </a>
-          </article>
-
-          <article class="from-right">
-            <a href="images/greenThumbContent.png" class="image fit"
-              ><img src="images/greenthumbLogo.png" title="GreenThumb" alt=""
-            /></a>
-          </article>
-          <article class="from-left">
-            <p></p>
-            <a href="images/pyBraidContent.png" class="image fit">
-              <img src="images/pybraidLogo.png" title="Pybraid" alt=""
-            /></a>
-          </article>
-          <article class="from-right">
-            <p></p>
-
-            <a href="images/detectPhoneMovementContent.png" class="image fit">
-              <img
-                src="images/detectPhoneMovement.gif"
-                title="Detect Phone Movement"
-                alt=""
-              />
-              <h1 style="color: black; font-size: 34px">
+        
+        <div id="pageOverlay" class="overlay"></div>
+        <div class="projects-grid">
+            <div class="project-card-container">
+                <div class="project-card" data-project-id="secondOpinionProject">
+                    <div class="card-flipper">
+                        <div class="card-face card-face--front">
+                            <img src="images/2ndOpinionFullLogo.png" alt="2nd Opinion">
+                        </div>
+                        <div class="card-face card-face--back"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card-container">
+                <div class="project-card" data-project-id="greenThumbProject">
+                    <div class="card-flipper">
+                        <div class="card-face card-face--front">
+                            <img src="images/greenthumbLogo.png" alt="GreenThumb">
+                        </div>
+                        <div class="card-face card-face--back"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card-container">
+                <div class="project-card" data-project-id="detectPhoneMovementProject">
+                    <div class="card-flipper">
+                        <div class="card-face card-face--front">
+                            <img src="images/detectPhoneMovement.gif" alt="DetectPhoneMovement">
+                            <h1 style="color: black; font-size: 34px">
                 Detect Phone Movement
               </h1>
-            </a>
-          </article>
-          <article class="from-left">
-            <p></p>
-
-            <a href="images/softwarePicAssistantContent.png" class="image fit">
-              <img
-                src="images/softwarePicAssistant.png"
-                title="Software Pic Assistant"
-                alt=""
-              />
-            </a>
-          </article>
+                        </div>
+                        <div class="card-face card-face--back"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card-container">
+                <div class="project-card" data-project-id="softrwarePicAssistantProject">
+                    <div class="card-flipper">
+                        <div class="card-face card-face--front">
+                            <img src="images/softwarePicAssistant.png" alt="Software Pic Assistant">
+                        </div>
+                        <div class="card-face card-face--back"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card-container">
+                <div class="project-card" data-project-id="pyBraidProject">
+                    <div class="card-flipper">
+                        <div class="card-face card-face--front">
+                            <img src="images/pybraidLogo.png" alt="PyBraid">
+                        </div>
+                        <div class="card-face card-face--back"></div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </section>
-    <div style="margin: auto; text-align: center; margin-bottom: 100px;">
-      <h2>Links</h2>
-      <span><a
-        href="https://secondopinionforum.com/about"
-        style="color: black; margin: 5px"
-        >https://secondopinionforum.com/about</a
-      ></span></br>
-      <a
-        href="https://github.com/AdamCassidy/feedback-app"
-        style="color: black; margin: 5px"
-        >2nd-Opinion-Code</a
-      ></br>
-      <a
-        href="https://github.com/AdamCassidy/GreenThumb/tree/master-backend/backend"
-        style="color: black; margin: 5px"
-        >Green-Thumb-Code</a
-      ></br>
-      <a
-        href="https://github.com/AdamCassidy/PyBraid"
-        style="color: black; margin: 5px"
-        >PyBraid-Code</a
-      ></br>
-      <a
-        href="https://github.com/AdamCassidy/DetectPhoneMovement"
-        style="color: black; margin: 5px"
-        >Detect-Phone-Movement-Code</a
-      ></br>
-      <a
-        href="https://huggingface.co/Narrator5000/llavanext-finetuned-stackoverflow-vqa"
-        style="color: black; margin: 5px"
-        >Software-Pic-Assistant-Model-Card</a
-      >
-    </div>
+        <div id="project-content" style="display: none;">
+            <div id="secondOpinionProject">
+                <h3>2nd Opinion</h3>
+                <div class="project-content-description left-align">
+                    <p>
+                      A responsive social media forum that's focused on discussion of constructive feedback.
+                      It was made with Vue.js and Firebase. It uses Vuex to manage state and makes RESTful API calls 
+                      to Firebase's realtime database where it holds user's content. It uses Firebase's authentication 
+                      service and funnels alert messages from them. The app also uses custom form validation for its authentication flow.
+                      Users can upload avatars, or images to their posts, and they 
+                      are kept in Firebase storage.
+                    </p>
 
+                    <p>
+                      The site is secure through SSL. Performance is optimized with asynchronous components. 
+                      SEO is optimized with meta tags. Also, all posts throughout time can be viewed because of 
+                      an infinite scroll implementation. They can also comment and reply to each other in realtime 
+                      on their posts and delete or edit all of their content. Users can also tag a topic to their post 
+                      if they please or view posts on a specific topic. JS cookie and Vuex are used to persist state, 
+                      and Sass is used for the styling.
+                    </p>
+                </div>
+                <div class="project-content-description">
+                    <h2>Skills gained</h2>
+                    <ul>
+                      <li>Vue.js</li>
+                      <li>Sass</li>
+                      <li>Webpack</li>
+                      <li>SEO</li>
+                      <li>Performance optimization</li>
+                      <li>Authentication and validation</li>
+                      <li>Realtime communication</li>
+                    </ul>
+                    <span><a
+                        href="https://secondopinionforum.com/about"
+                        target="_blank" style="color: black; margin: 5px"
+                        >https://secondopinionforum.com/about</a>
+                    </span></br>
+                    <span><a
+                        href="https://github.com/AdamCassidy/feedback-app"
+                        target="_blank" style="color: black; margin: 5px"
+                        >2nd-Opinion-Code</a>
+                    </span>
+                </div>
+            </div>
+            <div id="greenThumbProject">
+                <h3>GreenThumb</h3>
+                <div class="project-content-description left-align">
+                    <p>
+                      This is a responsive mobile app that stores a user’s photo of a local plant with MS SQL and Javascript, 
+                      and then identifies its species with Python. Registered users can also upload their photographs to 
+                      the appropriate species' page where they can be seen by other users. I worked on the back end, 
+                      on the RESTful API and Photo class, with Node.js and Express. This was made in an Agile environment, 
+                      using Git and integration testing.
+                    </p>
+                </div>
+                <div class="project-content-description">
+                    <h2>Skills gained</h2>
+                    <ul>
+                      <li>RESTful APIs</li>
+                      <li>Git</li>
+                      <li>Node.js</li>
+                      <li>Javascript</li>
+                    </ul>
+                    <span>
+                      <a href="https://github.com/AdamCassidy/GreenThumb/tree/master-backend/backend"
+                        target="_blank" style="color: black; margin: 5px">
+                        Green-Thumb-Code
+                      </a>
+                    </span>
+                </div>
+            </div>
+            <div id="detectPhoneMovementProject">
+                <h3>DetectPhoneMovement</h3>
+                <div class="project-content-description left-align">
+                        <p>
+                            An app, made by request for the police, that quickly sends a notification of the unique id of a phone if it was even slightly moved.
+                        </p>
+                </div>
+                <div class="project-content-description">
+                        <h2>Skills gained</h2>
+                        <ul>
+                            <li>Android Studio</li>
+                            <li>Firebase</li>
+                            <li>Volley</li>
+                        </ul>
+                        <span>
+                          <a
+                            href="https://github.com/AdamCassidy/DetectPhoneMovement"
+                            target="_blank" style="color: black; margin: 5px"
+                            >Detect-Phone-Movement-Code</a
+                          >
+                        </span>
+                </div>
+            </div>
+            <div id="softrwarePicAssistantProject">
+                <h3>Software Pic Assistant</h3>
+                    <div class="project-content-description left-align">
+                      <p>
+                          This model is a finetuned version of <b>LLaVA-Next (llava-hf/llava-v1.6-mistral-7b-hf)</b> specifically for visual question answering (VQA) on Stack Overflow questions containing images. The model was finetuned using QLoRA with 4-bit quantization, optimized to handle both text and image inputs.
+                          The training dataset was filtered from the <b>mirzaei2114/stackoverflowVQA-filtered-small</b> dataset. Only samples with a maximum input length of 1024 (for both question and answer combined) were used. Images were kept to size to capture detail needed for methods such as optical character recognition.
+                      </p>
+
+                      <h4>Direct Use</h4>
+                      <p>
+                          Visual Question Answering (VQA) on technical Stack Overflow (software-adjacent) questions with accompanying images. Drag a snipping rectangle for a screenshot around the exact focus/context for a question related to software development(usually front end) and accompany it with the question for inference.
+                      </p>
+
+                      <h4>Out-of-Scope Use</h4>
+                      <p>
+                          General-purpose VQA tasks, though performance on non-technical domains may vary.
+                      </p>
+                    </div>
+                    <div class="project-content-description">
+                      <h2>Skills gained</h2>
+                      <ul>
+                        <li>Data pipelines</li>
+                        <li>Data visualization</li>
+                        <li>Python</li>
+                      </ul>
+                      <a href="https://huggingface.co/Narrator5000/llavanext-finetuned-stackoverflow-vqa"
+                        target="_blank" style="color: black; margin: 5px"
+                        >Software-Pic-Assistant-Model-Card
+                      </a>
+                    </div>
+            </div>
+            <div id="pyBraidProject">
+                <h3>PyBraid</h3>
+                <div class="project-content-description left-align">
+                      <p>
+                        This is a Python library, made with unit testing and test-driven development, 
+                        that holds various unique object-oriented programming data structures and algorithms.
+                      </p>
+                </div>
+                <div class="project-content-description">
+                      <h2>Skills gained</h2>
+                      <ul>
+                        <li>Data structures</li>
+                        <li>Sorting algorithms</li>
+                        <li>Python</li>
+                      </ul>
+                      <span>
+                        <a href="https://github.com/AdamCassidy/PyBraid"
+                          target="_blank" style="color: black; margin: 5px"
+                          >PyBraid-Code
+                        </a>
+                      </span>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Contact -->
     <section id="contact" class="main style3 secondary">
       <div class="content">
@@ -157,23 +288,24 @@
           <h2>Contact</h2>
         </header>
         <div class="box">
-          <form
-            method="post"
-            action="mailto:adamcassidy011@gmail.com"
-            enctype="text/plain"
-          >
-            <div class="fields">
-              <div class="field">
-                <textarea
-                  name="message"
-                  placeholder="Message"
-                  rows="6"
-                ></textarea>
-              </div>
+          <form id="contact-form">
+          <div class="box">
+            <div class="form-group">
+                <label for="user_name">Name</label>
+                <input type="text" name="user_name" required />
             </div>
-            <ul class="actions special">
-              <li><input type="submit" value="Send Email" /></li>
-            </ul>
+            <div class="form-group">
+                <label for="user_email">Email</label>
+                <input type="email" name="user_email" required />
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea name="message" required></textarea>
+            </div>
+            <div class="form-group submit-button-group">
+                <button id="contactButton" type="submit">Send Message</button>
+            </div>
+          </div>
           </form>
         </div>
       </div>
@@ -184,7 +316,7 @@
       <!-- Icons -->
       <ul class="icons">
         <li>
-          <a href="github.com/AdamCassidy" class="icon brands fa-github"
+          <a href="https://github.com/AdamCassidy" class="icon brands fa-github"
             ><span class="label">Github</span></a
           >
           <a
@@ -209,6 +341,8 @@
     <script src="assets/js/browser.min.js"></script>
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
+    <script type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
